--- a/config.yaml
+++ b/config.yaml
@@ -13,18 +13,18 @@ markup:
       unsafe: true
 
 Menus:
-  main:
-    - identifier: blog
-      name: Blog
-      title: Blog posts
-      url: /blogs
-      weight: 1
+  #main:
+  #  - identifier: blog
+  #    name: Blog
+  #   title: Blog posts
+  #    url: /blogs
+  #    weight: 1
     
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
+  #  - identifier: gallery
+  #    name: Gallery
+  #    title: Blog posts
+  #    url: /gallery
+  #    weight: 2
 
     #Dropdown menu
     # - identifier: dropdown
@@ -48,7 +48,7 @@ params:
   title: "AJ Alfonso"
   description: My personal portfolio.
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/fav.png"
+  favicon: "/images/favicon.ico"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -147,7 +147,7 @@ params:
       - job: "Sales Associate"
         company: "The Source"
         companyUrl: "https://thesource.ca"
-        date: "Jul 2022 - present"
+        date: "Jul 2021 - present"
 
         # featuredLink:
         #   enable: true
@@ -162,46 +162,50 @@ params:
     # title: "Custom Name"
     # index: true
     items:
-      - title: "Master of Business Administration"
+      - title: "Bachelor of Science, Computer Science w/ Co-op"
         school:
-          name: "University of California, Berkeley"
-          url: "https://example.org"
-        date: "2013 - 2015"
-        GPA: "3.8 out of 5.0"
+          name: "Brock University"
+          url: "https://brocku.ca"
+        date: "2022-2025"
+        # GPA: "3.8 out of 5.0"
         content: |-
           Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-      - title: "Bachelor of Science in Computer Science"
-        school:
-          name: "Massachusetts Institute of Technology"
-          url: "https://example.org"
-        date: "2009 - 2013"
-        GPA: "3.9 out of 5.0"
+            - President of the Brock Filipino Student Association
+      - title: Software Engineering Technology
+        school: 
+          name: Centennial College
+          url: https://centennialcollege.ca
+        date: "2020-2021"
         content: |-
-          I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-          - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-          - Face mask detection using a single convolutional neural network.
-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-        featuredLink:
-          enable: true
-          name: "My academic record"
-          url: "https://example.com"
-      - title: "High School"
+          Completed Coursework
+            - Programming 1, Software Engineering Fundamentals, Web Interface Design
+      - title: "Bachelor of Science, Computer Science"
         school:
-          name: "Thomas Jefferson High School for Science and Technology."
-          url: "https://example.org"
-        GPA: "4.2 out of 5.0"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
+          name: "University of Toronto, Missisauga"
+          url: "https://utm.utoronto.ca"
+        date: "2018-2020"
+        #GPA: "3.9 out of 5.0"
+        content: |-
+          Completed Coursework
+            - Intro to Computer Programming, Intro to Computer Science, Intro to Mathematical Proofs, Software Design 
+          
+       # featuredLink:
+        #  enable: true
+        #  name: "My academic record"
+        #  url: "https://example.com"
+      - title: "High School Diploma w/ Specialist High Skills Major in Information Technology"
+        school:
+          name: "Bishop P.F Reding Catholic Secondary School."
+          url: "https://werbr.ca"
+        date: "2014-2018"
+        # GPA: "4.2 out of 5.0"
+        # featuredLink:
+        #   enable: true
+        #   url: "https://example.com"
 
   # Achievements
   achievements:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Google kickstart runner
@@ -273,14 +277,14 @@ params:
     enable: true
     #title: "Custom name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
+    email: aj.alfns@gmail.com
     btnName: Mail me
 
   footer:
-    # recentPosts: false
+    recentPosts: false
     socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
-      instagram: https://instagram.com
-      facebook: https://facebook.com
+      github: https://github.com/ajalfonso
+      linkedin: https://linkedin.com/in/aj-alfonso
+      # twitter: https://twitter.com
+      instagram: https://instagram.com/aj.alfns
+      # facebook: https://facebook.com
