fixed highschool link

--- a/config.yaml
+++ b/config.yaml
@@ -196,7 +196,7 @@ params:
       - title: "High School Diploma w/ Specialist High Skills Major in Information Technology"
         school:
           name: "Bishop P.F Reding Catholic Secondary School."
-          url: "https://werbr.ca"
+          url: "https://secondary.hcdsb.org/bishopreding/"
         date: "2014-2018"
         # GPA: "4.2 out of 5.0"
         # featuredLink:
