--- a/config.yaml
+++ b/config.yaml
@@ -101,7 +101,7 @@ params:
     enable: true
     intro: "Hi, my name is"
     title: "AJ A."
-    subtitle: "I create cool things"
+    #subtitle: "I create cool things"
     content: "An aspiring software engineer. I am passionate about the back end technologies that maintain and power the applications we use today."
     image: /images/aj.jpg
     button:
@@ -124,10 +124,10 @@ params:
     title: "About Me"
     image: "/images/aj.jpg"
     content: |-
-      I am a 2nd year Computer Science Co-op student at [Brock University](https://brocku.ca) in St. Catharines, ON, with a passion for back end development, cloud, and networking.
+      I am a second year Computer Science Co-op student at [Brock University](https://brocku.ca) in St. Catharines, ON, with a passion for back end development, cloud, and networking.
       
 
-      I am currently working on a Discord bot that will be able to display details about course offerings at Brock.
+      I am currently searching for a Summer 2023 Software Engineer Co-op placement.
     skills:
       enable: true
       title: "Here are a few technologies I've been working with recently:"
@@ -136,7 +136,7 @@ params:
         - "Oracle Cloud"        
         - "HTML"
         - "CSS"
-        - "Hugo"
+        - "Java"
         - "Git"
 
   # Experience
@@ -154,8 +154,20 @@ params:
         #   name: "View the project"
         #   url: "https://example.com"
 
-        content: "I am currently working as a part time Sales Associate at The Source, assisting customers with Consumer Electronics, as well as BCE branded Mobility and Residential services"
+        content: "By providing a high level of customer service through my extensive knowledge of Consumer Electronics, as well as BCE Mobility and Residential services, I am able to deliver an excellent customer experience. I have consistently achieved and exceeded mobility, residential, and consumer electronics sales targets."
+      - job: "Lifeguard and Swim Instructor"
+        company: "Town of Milton"
+        companyUrl: "https://www.milton.ca/"
+        date: "Feb 2017 - Jun 2021"
 
+        content: "Through coordination with other staff, I was able to enforce and maintain safety protocols within the pool facility. I also taught and supervised swimming lessons for patrons, from Parent and Tot, up to Adult age groups. "
+
+      - job: "IT Specialist"
+        company: "CompuMobile"
+        companyUrl: "https://compumobile.com/"
+        date: "Jul 2017"
+
+        content: "Completed hardware and software repairs on various computers and smartphones, and advised customers on technical issues with their devices."
   # Education
   education:
     enable: true
@@ -166,19 +178,14 @@ params:
         school:
           name: "Brock University"
           url: "https://brocku.ca"
-        date: "2022-2025"
+        date: "Expected 2026"
         # GPA: "3.8 out of 5.0"
         content: |-
-          Extracurricular Activities
-            - President of the Brock Filipino Student Association
-      - title: Software Engineering Technology
-        school: 
-          name: Centennial College
-          url: https://centennialcollege.ca
-        date: "2020-2021"
-        content: |-
           Completed Coursework
-            - Programming 1, Software Engineering Fundamentals, Web Interface Design
+            - Advanced Data Structures, Intro to Computer Architecture, Math for Computer Science
+
+          Extracurricular Activities
+            - President of the Brock Filipino Student Association, Intramural Volleyball
       - title: "Bachelor of Science, Computer Science"
         school:
           name: "University of Toronto, Missisauga"
@@ -227,54 +234,54 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - title: Hugo Profile
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-        image: /images/projects/profile.png
-        featured:
-          name: Demo
-          link: https://hugo-profile.netlify.app
+      - title: Home Network
+        content: Deployed a Unifi network with a OPNSense router for home use. I also currently host a Plex server for personal media consumption and am currently planning an optimal network layout for our new house.
+        image: /images/unifi.jpg
+        # featured:
+        #  name: Demo
+        #  link: https://hugo-profile.netlify.app
         # badges:
         #   - "Hugo"
         #   - "Bootstrap"
         #   - "Javascript"
-        links:
-          - icon: fa fa-envelope
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/hugo-profile
-          - icon: fab fa-twitter
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+        #links:
+        #  - icon: fa fa-envelope
+        #    url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
+        #  - icon: fab fa-github
+        #    url: https://github.com/gurusabarish/hugo-profile
+        #  - icon: fab fa-twitter
+        #    url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
 
-      - title: Image Converter
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-        image: /images/projects/converter.jpg
-        featured:
-          name: Demo
-          link: https://django-converter.herokuapp.com
+      - title: Personal Virtual Private Server
+        content: Hosted an Ubuntu-based virutal private server through Oracle Cloud. I deployed AAPanel to handle website and file hosting and implemented Git to easily deploy changes.
+        image: /images/oracle.jpg
+        # featured:
+        #  name: Demo
+        #  link: https://django-converter.herokuapp.com
         # badges:
         #   - "Django"
         #   - "Bootstrap"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
+        # links:
+        #  - icon: fab fa-github
+        #    url: https://github.com/gurusabarish/converter
 
-      - title: Hugo Profile V2
-        content: A clean and simple Hugo template for personal portfolio and blog.
-        image: /images/projects/profile2.jpg
-        featured:
-          name: Demo V2
-          link: https://hugo-profile-2.netlify.app
+      - title: DIY Electric Longboard
+        content: Built an electric longboard to commute between school, work, and home. Assembled components and housed them in custom Kydex casing.
+        image: /images/skateboard.jpg
+        # featured:
+        #  name: Demo V2
+        #  link: https://hugo-profile-2.netlify.app
         # badges:
         #   - "Hugo"
         #   - "Bootstrap"
         #   - "Javascript"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/HugoProfileV2
+        #links:
+        #  - icon: fab fa-github
+        #    url: https://github.com/gurusabarish/HugoProfileV2
 
   #Contact
   contact:
-    enable: true
+    enable: false
     #title: "Custom name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
     email: aj.alfns@gmail.com
