fixed year in about me

--- a/config.yaml
+++ b/config.yaml
@@ -125,7 +125,7 @@ params:
     title: "About Me"
     image: "/images/aj-new.jpg"
     content: |-
-      I am a second year Computer Science Co-op student at [Brock University](https://brocku.ca) in St. Catharines, ON, with a passion for back end development, cloud, and networking.
+      I am a third year Computer Science Co-op student at [Brock University](https://brocku.ca) in St. Catharines, ON, with a passion for back end development, cloud, and networking.
       
 
       I am currently working as a Technical Systems Analyst Co-op within CIBC's Managed Desktop Contact Centre Non-Production team.
