--- a/config.yaml
+++ b/config.yaml
@@ -149,7 +149,7 @@ params:
         company: "CIBC"
         companyUrl: "https://cibc.ca"
         date: "Sep 2023 - Present"
-        content: "fill"
+        content: "Recognizing a potential to optimize my team's workflow, I developed a .NET WinForms app using the Microsoft Playwright library to automate the configuration of OS Image builds. Our team had no central repository to store the tools we use, leading to me spearheading the adoption and migration of our tools to CIBC's Enterprise Github."
       - job: "Sales Associate"
         company: "The Source"
         companyUrl: "https://thesource.ca"
@@ -160,7 +160,7 @@ params:
         #   name: "View the project"
         #   url: "https://example.com"
 
-        content: "By providing a high level of customer service through my extensive knowledge of Consumer Electronics, as well as BCE Mobility and Residential services, I am able to deliver an excellent customer experience. I have consistently achieved and exceeded mobility, residential, and consumer electronics sales targets."
+        content: "By providing a high level of customer service through my extensive knowledge of Consumer Electronics, as well as BCE Mobility and Residential services, I was able to deliver an excellent customer experience. I consistently achieved and exceeded mobility, residential, and consumer electronics sales targets."
       - job: "Lifeguard and Swim Instructor"
         company: "Town of Milton"
         companyUrl: "https://www.milton.ca/"
@@ -183,20 +183,8 @@ params:
           Completed Coursework
             - Advanced Data Structures, Intro to Database Systems, Intro to Computer Architecture, Math for Computer Science
 
-          Extracurricular Activities
+          Extra Curricular Activities 
             - President of the Brock Filipino Student Association, Intramural Volleyball
-       # featuredLink:
-        #  enable: true
-        #  name: "My academic record"
-        #  url: "https://example.com"
-      - title: "High School Diploma w/ Specialist High Skills Major in Information Technology"
-        school:
-          name: "Bishop P.F Reding Catholic Secondary School."
-          url: "https://secondary.hcdsb.org/bishopreding/"
-        date: "2014-2018"
-        # GPA: "4.2 out of 5.0"
-        # featuredLink:
-        #   enable: true
         #   url: "https://example.com"
 
   # Achievements
