--- a/config.yaml
+++ b/config.yaml
@@ -102,7 +102,7 @@ params:
     intro: "Hi, my name is"
     title: "AJ A."
     #subtitle: "I create cool things"
-    content: "An aspiring software engineer. I am passionate about the back end technologies that maintain and power the applications we use today."
+    content: "An aspiring software engineer. I am passionate about building things that make our lives a little easier."
     image: /images/aj-new.jpg
     button:
       enable: true
@@ -125,7 +125,7 @@ params:
     title: "About Me"
     image: "/images/aj-new.jpg"
     content: |-
-      I am a third year Computer Science Co-op student at [Brock University](https://brocku.ca) in St. Catharines, ON, with a passion for back end development, cloud, and networking.
+      I am a third year Computer Science Co-op student at [Brock University](https://brocku.ca) in St. Catharines, ON, with a passion for full stack development, cloud, and networking.
       
 
       I am currently working as a Technical Systems Analyst Co-op within CIBC's Managed Desktop Contact Centre Non-Production team.
